--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,14 +6,14 @@
  * License: Creative Commons Attribution 3.0 License
  * Website: http://themes.3rdwavemedia.com/
 */
-/* styles.css */
+/* styles-3.css */
 /* ======= Base ======= */
 body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
   background: #f5f5f5;
-  font-size: 13px;
-  padding: 2px;
+  font-size: 16px;
+  padding: 20px 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,7 +26,7 @@ h6 {
   font-weight: 700;
 }
 a {
-  color: #2d7788;
+  color: #3d884d;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -34,7 +34,7 @@ a {
 }
 a:hover {
   text-decoration: underline;
-  color: #1a454f;
+  color: #25532f;
 }
 a:focus {
   text-decoration: none;
@@ -43,22 +43,23 @@ p {
   line-height: 1.5;
 }
 .wrapper {
-  background: #42A8C0;
+  min-height: 800px;
+  background: #FFF;
   max-width: 960px;
   margin: 0 auto;
   position: relative;
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-columns: 100fr 260px;
+  grid-template-rows: auto;
+  grid-template-areas: "main sidebar";
 }
 .sidebar-wrapper {
-  background: #42A8C0;
-  position: absolute;
-  right: 0;
-  width: 260px;
-  height: 100%;
-  min-height: 800px;
+  background: #5BB66F;
   color: #fff;
+  grid-area: sidebar;
 }
 .sidebar-wrapper a {
   color: #fff;
@@ -77,10 +78,18 @@ p {
 }
 .sidebar-wrapper .tagline {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 0;
+}
+.sidebar-wrapper .location {
+  padding-left: 20px;
+}
+.sidebar-wrapper .location i.fa {
+  margin-left: -20px;
+  width: 20px;
+  margin-right: 0;
 }
 .sidebar-wrapper .profile {
   margin-bottom: 15px;
@@ -106,13 +115,13 @@ p {
 }
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   margin-top: 0;
   margin-bottom: 15px;
 }
 .sidebar-wrapper .degree {
-  font-size: 14px;
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 5px;
 }
@@ -146,35 +155,36 @@ p {
   margin-bottom: 0;
 }
 .sidebar-wrapper .interests-container .keywords .label {
-  color: #42A8C0 !important;
+  color: #5BB66F !important;
   background: #f5f5f5 !important;
-  line-height: 1.9rem;
+  line-height: 2.7rem;
+  font-size: 80%;
 }
 .sidebar-wrapper .skills-container .item {
   margin-bottom: 10px;
   overflow: hidden;
 }
 .sidebar-wrapper .skills-container .level-title {
-  font-size: 14px;
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 12px;
 }
 .sidebar-wrapper .skills-container .keywords .label {
-  color: #42A8C0 !important;
+  color: #5BB66F !important;
   background: #f5f5f5 !important;
-  line-height: 1.9rem;
+  line-height: 2.7rem;
+  font-size: 80%;
 }
 .main-wrapper {
   background: #fff;
   padding: 30px;
-  padding-right: 320px;
-  min-height: 800px;
+  grid-area: main;
 }
 .main-wrapper .section-title {
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 500;
-  color: #2d7788;
+  color: #3d884d;
   position: relative;
   margin-top: 0;
   margin-bottom: 20px;
@@ -193,7 +203,7 @@ p {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background: #2d7788;
+  background: #3d884d;
   text-align: center;
   padding-top: 8px;
   font-size: 16px;
@@ -204,7 +214,7 @@ p {
   margin-bottom: 0px;
 }
 .main-wrapper .experiences-section {
-  margin-top: 25px;
+  margin-top: 40px;
 }
 .main-wrapper .experiences-section .item {
   margin-bottom: 30px;
@@ -216,7 +226,7 @@ p {
 }
 .main-wrapper .job-title {
   color: #3F4650;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 500;
@@ -231,8 +241,11 @@ p {
   margin-bottom: 10px;
   color: #97AAC3;
 }
+.main-wrapper .highlights {
+  margin-top: 1em;
+}
 .main-wrapper .project-title {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 5px;
@@ -245,9 +258,12 @@ p {
 }
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
-  .sidebar-wrapper {
-    position: static;
-    width: inherit;
+  body {
+    padding: 0;
+  }
+  .wrapper {
+    grid-template-columns: auto;
+    grid-template-areas: "sidebar" "main";
   }
   .main-wrapper {
     padding: 30px;
