--- a/assets/less/css/styles.css
+++ b/assets/less/css/styles.css
@@ -43,7 +43,7 @@ p {
   line-height: 1.5;
 }
 .wrapper {
-  background: #FDA246;
+  background: #FFF;
   max-width: 960px;
   margin: 0 auto;
   position: relative;
