--- a/partials/interests.hbs
+++ b/partials/interests.hbs
@@ -1,6 +1,6 @@
 {{#if resume.interests}}
     <div class="interests-container container-block">
-        <h2 class="container-block-title"><i class="fa fa-heart"></i> Intérêts</h2>
+        <h2 class="container-block-title"><i class="fa fa-heart"></i> Interessen</h2>
          {{#if resume.interests.length}}
         <div class="keywords">
             {{#each resume.interests}}
