--- a/partials/languages.hbs
+++ b/partials/languages.hbs
@@ -1,6 +1,6 @@
 {{#if resume.languages}}
     <div class="languages-container container-block">
-         <h2 class="container-block-title"><i class="fa fa-bullhorn"></i> Langues</h2>
+         <h2 class="container-block-title"><i class="fa fa-bullhorn"></i> Sprachen</h2>
         <ul class="list-unstyled interests-list">
             {{#resume.languages}}
                 <li>{{language}}</li>
