--- a/partials/volunteer.hbs
+++ b/partials/volunteer.hbs
@@ -1,13 +1,13 @@
 {{#if resume.volunteer}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-handshake-o"></i>Volontariats</h2>
+        <h2 class="section-title"><i class="fa fa-handshake-o"></i>Ehrenämter</h2>
 
         {{#resume.volunteer}}
             <div class="item">
                 <div class="meta">
                     <div class="upper-row">
                         <h3 class="job-title">{{position}}</h3>
-                        <div class="time">{{year startDate}} - {{year endDate}}</div>
+                        <div class="time">{{myDate startDate}} - {{myDate endDate}}</div>
                     </div><!--//upper-row-->
                     <div class="company">{{#if url}}<a href="{{url}}" target="_blank">{{/if}}{{organization}}{{#if url}}</a>{{/if}}</div>
                 </div><!--//meta-->
