Add favicon and verify tags

--- a/resume.hbs
+++ b/resume.hbs
@@ -24,6 +24,12 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
+        <!-- Pinterest verify -->
+        <meta name="p:domain_verify" content="160395556e4ddb17721c8b5da726fa96"/>
+        
+        <!-- Flattr verify -->
+        <meta name="flattr:id" content="m1xjz6">
+
         {{> schemaorg}}
     </head>
 
