--- a/partials/awards.hbs
+++ b/partials/awards.hbs
@@ -1,6 +1,6 @@
 {{#if resume.awards}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-trophy"></i>Récompenses</h2>
+        <h2 class="section-title"><i class="fa-solid fa-trophy"></i>Récompenses</h2>
 
         {{#resume.awards}}
             <div class="item">
