--- a/partials/certificates.hbs
+++ b/partials/certificates.hbs
@@ -1,6 +1,6 @@
 {{#if resume.certificates}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-certificate"></i>Zertifizierungen</h2>
+        <h2 class="section-title"><i class="fa-solid fa-certificate"></i>Zertifizierungen</h2>
 
         {{#resume.certificates}}
             <div class="item">
