--- a/partials/education.hbs
+++ b/partials/education.hbs
@@ -1,6 +1,6 @@
 {{#if resume.education}}
     <div class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-book"></i>Ausbildung</h2>
+        <h2 class="section-title"><i class="fa-solid fa-book"></i>Ausbildung</h2>
         {{#resume.education}}
             <div class="item">
                 <div class="meta">
