--- a/partials/publications.hbs
+++ b/partials/publications.hbs
@@ -1,6 +1,6 @@
 {{#if resume.publications}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-book"></i>Veröffentlichungen</h2>
+        <h2 class="section-title"><i class="fa-solid fa-book"></i>Veröffentlichungen</h2>
 
         {{#resume.publications}}
             <div class="item">
