--- a/partials/volunteer.hbs
+++ b/partials/volunteer.hbs
@@ -1,6 +1,6 @@
 {{#if resume.volunteer}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-handshake-o"></i>Ehrenämter</h2>
+        <h2 class="section-title"><i class="fa-solid fa-handshake"></i>Ehrenämter</h2>
 
         {{#resume.volunteer}}
             <div class="item">
