--- a/partials/work.hbs
+++ b/partials/work.hbs
@@ -1,6 +1,6 @@
 {{#if resume.work}}
     <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-briefcase"></i>Berufserfahrung</h2>
+        <h2 class="section-title"><i class="fa-solid fa-briefcase"></i>Berufserfahrung</h2>
 
         {{#resume.work}}
             <div class="item">
