--- a/assets/less/default/base.less
+++ b/assets/less/default/base.less
@@ -76,7 +76,7 @@ p {
     .location {
         padding-left: 20px;
         
-        i.fa {
+        i[class*="fa-"] {
             margin-left: -20px;
             width: 20px;
             margin-right: 0;
@@ -88,7 +88,7 @@ p {
         height: 110px;
     }
     .contact-list {
-        .fa {
+        [class*="fa-"] {
             margin-right: 5px;
             font-size: 18px;
             vertical-align: middle;
@@ -100,7 +100,7 @@ p {
             }
         }
         .email {
-            .fa {
+            [class*="fa-"] {
                 font-size: 14px;
             }
         }
@@ -197,7 +197,7 @@ p {
         position: relative;
         margin-top: 0;
         margin-bottom: 20px;
-        .fa {
+        [class*="fa-"] {
             width: 30px;
             height: 30px;
             margin-right: 8px;
