--- a/partials/basics.hbs
+++ b/partials/basics.hbs
@@ -7,15 +7,14 @@
 
     <div class="contact-container container-block">
         <ul class="list-unstyled contact-list">
-            {{#if email}}<li class="email"><i class="fa fa-envelope"></i><a href="mailto:{{email}}">{{email}}</a></li>{{/if}}
-            {{#if phone}}<li class="phone"><i class="fa fa-phone"></i><a href="tel:{{phone}}">{{phone}}</a></li>{{/if}}
-            {{#if location}}<li class="location"><i class="fa fa-map-marker"></i>{{location.address}}<br>{{location.postalCode}} {{location.city}}</li>{{/if}}
-            {{#if url}}<li class="website"><i class="fa fa-globe"></i><a href="{{url}}" target="_blank">{{displayUrl url}}</a></li>{{/if}}
+            {{#if email}}<li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto:{{email}}">{{email}}</a></li>{{/if}}
+            {{#if phone}}<li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:{{phone}}">{{phone}}</a></li>{{/if}}
+            {{#if location}}<li class="location"><i class="fa-solid fa-map-marker"></i>{{location.address}}<br>{{location.postalCode}} {{location.city}}</li>{{/if}}
+            {{#if url}}<li class="website"><i class="fa-solid fa-globe"></i><a href="{{url}}" target="_blank">{{displayUrl url}}</a></li>{{/if}}
 
             {{#each profiles}}
-                <li class="{{toLowerCase network}}"><i class="fa fa-{{toLowerCase network}}"></i><a href="{{url}}" target="_blank">{{#if url}}{{displayUrl url}}{{else}}@{{username}}{{/if}}</a></li>
+                <li class="{{toLowerCase network}}"><i class="fa-brands fa-{{toLowerCase network}}"></i><a href="{{url}}" target="_blank">{{#if url}}{{displayUrl url}}{{else}}@{{username}}{{/if}}</a></li>
             {{/each}}
-            <!--                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>  -->
         </ul>
     </div><!--//contact-container-->
 {{/resume.basics}}
