--- a/partials/skills.hbs
+++ b/partials/skills.hbs
@@ -1,6 +1,6 @@
 {{#if resume.skills}}
     <section class="interests-container container-block">
-        <h2 class="container-block-title"><i class="fa fa-rocket"></i> Fähigkeiten und Kenntnisse</h2>
+        <h2 class="container-block-title"><i class="fa-solid fa-rocket"></i> Fähigkeiten und Kenntnisse</h2>
         <div class="skills-container">
             {{#each resume.skills}}
     <div class="item">
