--- a/resume.hbs
+++ b/resume.hbs
@@ -50,7 +50,7 @@
         </div><!--//main-body-->
     </div>
     <div style="display:none">
-      <a rel="me" href="https://troet.cafe/@bahuma20">Mastodon</a>
+      <a rel="me" href="https://noitl.space/@bahuma20">Mastodon</a>
     </div>
     <!-- Javascript -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
