Update Privacy Policy to give more details about how data is processed.

--- a/privacy-openscale2healthconnect.html.twig
+++ b/privacy-openscale2healthconnect.html.twig
@@ -11,8 +11,20 @@
 
     <p>This app only writes to HealthConnect and does not read anything. It will copy your weight data from OpenScale to
         Health Connect. Your data will never leave your device or will be uploaded to the internet or a third party.</p>
-    <p>If you have any questions or concerns, please contact us at <a href="mailto:info@bahuma.io">info@bahuma.io</a>
-    </p>
+    
+    <p>We protect your data by not storing it on your device or in some remote location. Neither will your data be analyzed or tracked.
+        The only processing done is reading from the OpenScale app, converting into the required format and writing to Health Connect.</p>
+
+    <p>Because of the fact, that the app does not store any data, there is also no need to delete data. You can simply 
+        uninstall the app, if you don't use it anymore.<br>
+        If you want to, you can delete all data, that was written to Health Connect by the app. You can find information about 
+        how to do that here: 
+        <a href="https://support.google.com/android/answer/12201232?hl=en#:~:text=Delete%20a%20specific%20app%E2%80%99s%20data" 
+            target="_blank">https://support.google.com/android/answer/12201232?hl=en</a></p>
+
+    <p>The use of information received from Health Connect will adhere to the Health Connect Permissions policy, including the Limited Use requirements.</p>
+    
+    <p>If you have any questions or concerns, please contact us at <a href="mailto:info@bahuma.io">info@bahuma.io</a></p>
 </body>
 
 </html>
