Add styling and small text adjustments

--- a/privacy-openscale2healthconnect.html.twig
+++ b/privacy-openscale2healthconnect.html.twig
@@ -3,6 +3,15 @@
 
 <head>
     <title>Privacy Policy OpenScale to Health Connect Android app</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            line-height: 1.5em;
+            padding: 1em;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +22,8 @@
         Health Connect. Your data will never leave your device or will be uploaded to the internet or a third party.</p>
     
     <p>We protect your data by not storing it on your device or in some remote location. Neither will your data be analyzed or tracked.
-        The only processing done is reading from the OpenScale app, converting into the required format and writing to Health Connect.</p>
+        The only processing done by the app is reading from the OpenScale app, converting the data into the required format and writing to Health Connect.<br>
+        All of that happens locally on your device.</p>
 
     <p>Because of the fact, that the app does not store any data, there is also no need to delete data. You can simply 
         uninstall the app, if you don't use it anymore.<br>
@@ -23,7 +33,7 @@
             target="_blank">https://support.google.com/android/answer/12201232?hl=en</a></p>
 
     <p>The use of information received from Health Connect will adhere to the Health Connect Permissions policy, including the Limited Use requirements.</p>
-    
+
     <p>If you have any questions or concerns, please contact us at <a href="mailto:info@bahuma.io">info@bahuma.io</a></p>
 </body>
 
