Make privacy policy mobile friendly

--- a/privacy-openscale2healthconnect.html.twig
+++ b/privacy-openscale2healthconnect.html.twig
@@ -3,6 +3,7 @@
 
 <head>
     <title>Privacy Policy OpenScale to Health Connect Android app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             font-family: sans-serif;
