--- a/privacy-openscale2healthconnect.html.twig
+++ b/privacy-openscale2healthconnect.html.twig
@@ -28,7 +28,7 @@
 
     <p>Because of the fact, that the app does not store any data, there is also no need to delete data. You can simply 
         uninstall the app, if you don't use it anymore.<br>
-        If you want to, you can delete all data, that was written to Health Connect by the app. You can find information about 
+        If you want to, you can delete all data from Health Connect that was created by the app. You can find information about 
         how to do that here: 
         <a href="https://support.google.com/android/answer/12201232?hl=en#:~:text=Delete%20a%20specific%20app%E2%80%99s%20data" 
             target="_blank">https://support.google.com/android/answer/12201232?hl=en</a></p>
