Remove hero img

--- a/index.html.twig
+++ b/index.html.twig
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
-                            <img src="img/hero.png" alt="Hero Image">
+                            <!-- <img src="img/hero.png" alt="Hero Image"> -->
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg?v=2" alt="Image">
+                            <img src="img/about.webp?v=1" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
